<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">nadya_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_dapatkan_penawa">Dapatkan penawaran menarik!</string>
<string name="msg_berita_dan_info">Berita dan Info untuk anda</string>
<string name="lbl_logout">Logout</string>
<string name="lbl_unduh">UNDUH</string>
<string name="lbl_o">O</string>
<string name="lbl_point_kamu">Point Kamu</string>
<string name="lbl_xxx_xxx_xxx">XXX XXX XXX</string>
<string name="lbl_t">T</string>
<string name="lbl4">-</string>
<string name="lbl_kartu_digital">Kartu Digital</string>
<string name="lbl2">!</string>
<string name="msg_temukan_jadwal">Temukan jadwal dan event donor darah terdekat dan mulai menjaga kesehatan dengan donor darah rutin </string>
<string name="lbl3">+</string>
<string name="lbl_masuk">MASUK</string>
<string name="lbl_bloodliners">BLOODLINERS!</string>
<string name="lbl_akan_datang">Akan datang</string>
<string name="msg_bekasi_jawa_ba">Bekasi, Jawa Barat</string>
<string name="msg_gmail_com_mai">\@gmail.com/@mail.com</string>
<string name="msg_belum_memiliki">Belum memiliki akun BLOODIFY? </string>
<string name="lbl_update_data">Update Data</string>
<string name="msg_mulai_gaya_hidu">Mulai Gaya Hidup Sehat dengan Donor Darah</string>
<string name="lbl_golongan_darah">Golongan Darah</string>
<string name="msg_saya_belum_tahu">Saya belum tahu golongan darah saya</string>
<string name="lbl_cari_artikel">Cari artikel</string>
<string name="lbl_kirim_ulang">Kirim ulang</string>
<string name="lbl_mu"> mu!</string>
<string name="lbl_reward">REWARD</string>
<string name="msg_kab_bekasi_ja">KAB. BEKASI, JAWA BARAT</string>
<string name="msg_pilih_tipe_golo">Pilih tipe Golongan darah kamu ya!</string>
<string name="lbl_a">A</string>
<string name="lbl_b">B</string>
<string name="lbl_8_kali">8 Kali</string>
<string name="lbl_metland_tambun">Metland Tambun</string>
<string name="lbl_000894271909">000894271909</string>
<string name="lbl_bloodify2">BLOODIFY</string>
<string name="lbl_detail_kegiatan">DETAIL KEGIATAN</string>
<string name="lbl_gender">Gender</string>
<string name="msg_mereka_selamat">Mereka SELAMAT, kita SEHAT</string>
<string name="lbl_point_saya">Point Saya</string>
<string name="lbl_darah">Darah</string>
<string name="lbl_jl_xxxx">Jl.  XXXX</string>
<string name="msg_lupa_kata_sandi">Lupa kata sandi?</string>
<string name="msg_id_pmi_xxx_xxx">ID. PMI xxx xxxx xxx</string>
<string name="lbl_ab2">AB</string>
<string name="msg_emukan_jadwal_d">emukan jadwal dan event donor darah terdekat dan mulai menjaga kesehatan dengan donor darah rutin </string>
<string name="lbl_dengan">dengan</string>
<string name="msg_tukarkan_point">Tukarkan point kamu, dan dapatkan penawaran menarik!</string>
<string name="msg_urgent_pmi_kab">URGENT!
PMI Kab. Bekasi membutuhkan stok darah: O+</string>
<string name="msg_kegiatan_donor">Kegiatan donor darah di PMI Kab. Bekasi dapat diikuti oleh siapapun yang memenuhi syarat sebagai pendonor.</string>
<string name="msg_donor_selanjutn">Donor Selanjutnya</string>
<string name="msg_terima_kasih_at">Terima kasih atas kebaikan hati mu! </string>
<string name="lbl_kg">(Kg)</string>
<string name="msg_disc_20_all_va">Disc 20% All variant!</string>
<string name="lbl_sehat2">SEHAT</string>
<string name="msg_selamat_datang2">Selamat datang kembali </string>
<string name="lbl_mereka">Mereka </string>
<string name="lbl_hari_ini">Hari ini</string>
<string name="lbl_masuk2">Masuk</string>
<string name="lbl_riwayat_donor">Riwayat Donor</string>
<string name="msg_urgent_pmi_ka">URGENT! \u2028PMI Kab. Bekasi membutuhkan stok darah 0+</string>
<string name="msg_wanita_23_tahu">Wanita, 23 Tahun, 51 Kg</string>
<string name="lbl_discover">DISCOVER</string>
<string name="lbl_bloodliners2">BLOODLINERS</string>
<string name="lbl_tanggal_lahir">Tanggal Lahir</string>
<string name="lbl_faq">FAQ</string>
<string name="msg_minggu_15_apri">Minggu, 15 April 2023</string>
<string name="lbl_profil2">Profil</string>
<string name="lbl_lainnya"> lainnya!</string>
<string name="lbl_preferensi">Preferensi</string>
<string name="msg">*****************</string>
<string name="lbl_03_juni_2023">03 Juni
2023</string>
<string name="lbl_ubah">UBAH</string>
<string name="lbl_ify">ify</string>
<string name="lbl_donor_terakhir">Donor Terakhir</string>
<string name="lbl_lanjut">LANJUT</string>
<string name="msg_join_the_bloodi">Join the Bloodify community and give the gift of life</string>
<string name="msg_mudah_lakukan">Mudah! lakukan gerakan ini untuk olah raga di rumah</string>
<string name="msg_utd_pmi_kabupat">UTD PMI Kabupaten Bekasi
Buka setiap hari, pukul 08.00 - 20.00</string>
<string name="msg_dapatkan_reward">Dapatkan REWARD atas kebaikan hati mu!</string>
<string name="msg_password_baru_s">Password baru sudah terkirim ke alamat email kamu! </string>
<string name="msg_donate_blood_s">Donate blood, save life!</string>
<string name="lbl_berat_badan">Berat Badan</string>
<string name="lbl_gaya">Gaya</string>
<string name="lbl_sehat">Sehat</string>
<string name="lbl_donor">Donor </string>
<string name="msg_utd_pmi_kabupat2">UTD PMI Kabupaten Bekasi</string>
<string name="lbl_kata_sandi">Kata Sandi</string>
<string name="lbl_03_maret_2023">03 Maret 2023</string>
<string name="lbl_mulai">Mulai </string>
<string name="msg_lorem_ipsum_is3">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. "</string>
<string name="msg_ayo_bergabung_b">Ayo bergabung bersama BLOODLINERS lainnya!</string>
<string name="msg_bekasi_berpijar">Bekasi Berpijar Peduli</string>
<string name="lbl_ab">AB-</string>
<string name="msg_lorem_ipsum_is2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  </string>
<string name="msg_pilih_rhesusmu">Pilih Rhesusmu juga ya!</string>
<string name="msg_tebus_murah_set2">Tebus murah setiap pembelian Chatime senilai 45rb!</string>
<string name="lbl_hidup">Hidup </string>
<string name="lbl_reward_kamu">REWARD KAMU </string>
<string name="msg_kamis_13_april">Kamis, 13 April 2023</string>
<string name="lbl_tgl_lahir">Tgl. Lahir</string>
<string name="lbl_artikel_pilihan">Artikel Pilihan</string>
<string name="lbl_januari_2023">Januari, 2023</string>
<string name="lbl">\? </string>
<string name="lbl_login_kembali">Login kembali</string>
<string name="msg_kartu_digital_a">KARTU DIGITAL ANDA</string>
<string name="lbl_atas_kebaikan">atas kebaikan </string>
<string name="msg_bagaimana_kabar">Bagaimana kabarmu hari ini?</string>
<string name="msg_pukul_08_00_2">Pukul 08.00 - 20.00</string>
<string name="msg_kumpulkan_point">Kumpulkan point mu, dan dapatkan penawaran menarik dari kami!</string>
<string name="msg_halo_veronica">Halo, Veronica Park!</string>
<string name="lbl_jadwal_kegiatan">JADWAL KEGIATAN</string>
<string name="lbl_email">Email</string>
<string name="lbl_s_k_berlaku">S&amp;K Berlaku</string>
<string name="lbl_bloodify">Bloodify</string>
<string name="lbl_80">80</string>
<string name="msg_buka_setiap_har">Buka setiap hari</string>
<string name="msg_tidak_menerima">Tidak menerima email?</string>
<string name="lbl_dapatkan">Dapatkan</string>
<string name="msg_sebagian_data_a">Sebagian data akan berubah.
Simpan Perubahan?</string>
<string name="msg_tahukan_kamu_ba">Tahukan kamu bahwa melakukan donor darah akan mengurangi resiko penyakit Jantung? 
Dan yang paling utama adalah kalian menyelamatkan nyawa pasien!</string>
<string name="msg_syarat_dan_kete">Syarat dan Ketentuan:</string>
<string name="lbl_hati">hati</string>
<string name="lbl_veronica_park">Veronica Park</string>
<string name="msg_belum_memiliki2">Belum memiliki akun</string>
<string name="lbl_send_feedback">Send Feedback</string>
<string name="lbl_profil">PROFIL</string>
<string name="lbl_ya">Ya</string>
<string name="lbl_tidak">Tidak</string>
<string name="msg_anti_hambar_co">Anti hambar, coba resep sederhana oatmeal </string>
<string name="lbl_login">LOGIN</string>
<string name="lbl_batal">BATAL</string>
<string name="lbl_blood">Blood</string>
<string name="msg_tebus_murah_set">Tebus murah setiap pembelian 45ribu!</string>
<string name="lbl_lebih_banyak">Lebih banyak</string>
<string name="msg_jl_raya_teuku">Jl. Raya Teuku Umar No.49, Wanasari, Kec. Cibitung, Kabupaten Bekasi, Jawa Barat 17510</string>
<string name="lbl_simpan">SIMPAN</string>
<string name="msg_tulis_alamat_em">Tulis alamat email untuk mengatur ulang password</string>
<string name="msg_sudah_memiliki2">Sudah memiliki akun </string>
<string name="lbl_selamat">SELAMAT</string>
<string name="msg_sudah_memiliki">Sudah memiliki akun BLOODIFY? </string>
<string name="lbl_daftar2">Daftar</string>
<string name="msg_apakah_boleh_me">Apakah boleh mendonorkan darah saat berpuasa?</string>
<string name="msg_ayo_bergabung_b2">Ayo bergabung bersama </string>
<string name="lbl_tentang_kami">Tentang Kami</string>
<string name="lbl_lokasi_outlet">Lokasi/Outlet:</string>
<string name="lbl_nama_lengkap">Nama Lengkap</string>
<string name="lbl_id_pmi">ID PMI</string>
<string name="msg_lorem_ipsum_is">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."</string>
<string name="lbl_no_hp">No. Hp</string>
<string name="lbl_kita">, kita</string>
<string name="lbl_daftar">DAFTAR</string>
<string name="lbl_0813_xxxx_xxxx">0813 XXXX XXXX</string>
<string name="msg_gedung_juang_45">Gedung Juang 45 Bekasi</string>
<string name="msg_pmr_smkn_1_cika">PMR SMKN 1 Cikarang Barat</string>
<string name="lbl_bergabung">BERGABUNG</string>
<string name="lbl_alamat">Alamat</string>
<string name="msg_selamat_datang">Selamat datang kembali BLOODLINERS!</string>
<string name="lbl_informasi_umum">Informasi Umum</string>
<string name="lbl_halo">Halo, </string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
</resources>
