<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="halamanLoginVM" type="com.nadyasapplication.app.modules.halamanlogin.data.viewmodel.HalamanLoginVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearHalamanLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <ImageView android:id="@+id/imageBackOne"
            android:layout_height="@dimen/_21pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="@dimen/_40pxh"
            android:scaleType="fitXY" android:src="@drawable/img_back1"
            tools:ignore="ContentDescription" tools:src="@drawable/img_back1"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnselamatdatang"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_38pxv"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:id="@+id/txtSelamatdatang"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_2pxh"
                android:text="@{halamanLoginVM.halamanLoginModel.txtSelamatdatang}"
                style="@style/txtJosefinSansromanregular18" tools:text="@string/msg_selamat_datang"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtBagaimanakabar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{halamanLoginVM.halamanLoginModel.txtBagaimanakabar}"
                style="@style/txtJosefinSansromanlight13" tools:text="@string/msg_bagaimana_kabar"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearAlamatEmail"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_42pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius_3">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{halamanLoginVM.halamanLoginModel.txtEmail}"
                    style="@style/txtJosefinSansromanmedium13" tools:text="@string/lbl_email"/>
                <EditText
                    android:background="@drawable/rectangle_bg_bluegray_100_radius_2"
                    android:ellipsize="end"
                    android:hint="@string/msg_gmail_com_mai"
                    android:id="@+id/etGroupThirtyOne"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_9pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@={halamanLoginVM.halamanLoginModel.etGroupThirtyOneValue}"
                    android:textColorHint="@color/gray_800_7f"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius_3">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtKataSandi"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{halamanLoginVM.halamanLoginModel.txtKataSandi}"
                    style="@style/txtJosefinSansromanmedium13" tools:text="@string/lbl_kata_sandi"/>
                <EditText
                    android:background="@drawable/rectangle_bg_bluegray_100_radius_2"
                    android:ellipsize="end" android:hint="@string/msg"
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_11pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_8pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@={halamanLoginVM.halamanLoginModel.etPasswordValue}"
                    android:textColorHint="@color/gray_800_7f"
                    style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLupakatasandi"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_210pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{halamanLoginVM.halamanLoginModel.txtLupakatasandi}"
                style="@style/txtJosefinSansromanextralight12"
                textUnderline="true" tools:text="@string/msg_lupa_kata_sandi"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnMasuk"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginStart="@dimen/_26pxh"
                android:layout_marginTop="@dimen/_236pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_masuk"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_masuk"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowlanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginStart="@dimen/_26pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.83"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{halamanLoginVM.halamanLoginModel.txtLanguage}"
                    style="@style/txtJosefinSansromanextralight12" tools:text="@string/msg_belum_memiliki"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDaftar"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_weight="0.17"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{halamanLoginVM.halamanLoginModel.txtDaftar}"
                    style="@style/txtJosefinSansromanregular12_2" tools:text="@string/lbl_daftar2"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
