<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="passwordBaruTerkirimVM" type="com.nadyasapplication.app.modules.passwordbaruterkirim.data.viewmodel.PasswordBaruTerkirimVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearPasswordbarut"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <ImageView android:id="@+id/imageAsset2319xThree"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_87pxh"
            android:layout_marginEnd="@dimen/_61pxh"
            android:layout_marginStart="@dimen/_61pxh"
            android:layout_marginTop="@dimen/_94pxv"
            android:layout_width="@dimen/_100pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_asset2319x3}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_asset2319x3"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnlanguage"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_59pxh"
            android:layout_marginStart="@dimen/_61pxh"
            android:layout_marginTop="@dimen/_93pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:gravity="start"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:text="@{passwordBaruTerkirimVM.passwordBaruTerkirimModel.txtLanguage}"
                style="@style/txtJosefinSansromanregular14" tools:text="@string/msg_password_baru_s"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLoginkembali"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{passwordBaruTerkirimVM.passwordBaruTerkirimModel.txtLoginkembali}"
                style="@style/txtJosefinSansromanregular14_1" tools:text="@string/lbl_login_kembali"/>
            <LinearLayout android:id="@+id/linearRowtidakmenerima"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTidakmenerima"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.67"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{passwordBaruTerkirimVM.passwordBaruTerkirimModel.txtTidakmenerima}"
                    style="@style/txtJosefinSansromanregular14" tools:text="@string/msg_tidak_menerima"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtKirimulang"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.33"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{passwordBaruTerkirimVM.passwordBaruTerkirimModel.txtKirimulang}"
                    style="@style/txtJosefinSansromanregular14_1"
                    textUnderline="true" tools:text="@string/lbl_kirim_ulang"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtMASUK"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_195pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{passwordBaruTerkirimVM.passwordBaruTerkirimModel.txtMASUK}"
                style="@style/txtJosefinSansromanmedium20_1" tools:text="@string/lbl_masuk"/>
        </LinearLayout>
    </LinearLayout>
</layout>
